added github workflow

--- a/.gitignore
+++ b/.gitignore
@@ -50,7 +50,7 @@ cdk.out/
 # ------------------------
 # GitHub Actions
 # ------------------------
-.github/workflows/*.log
+.github/workflows/*.logs
 
 # ------------------------
 # Terraform (future-proof)
